[gd_scene load_steps=13 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/grass.png" type="Texture" id=2]
[ext_resource path="res://Main.gd" type="Script" id=3]
[ext_resource path="res://Coin.tscn" type="PackedScene" id=4]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=5]
[ext_resource path="res://Hurt.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/audio/Hit.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/audio/Coin.wav" type="AudioStream" id=8]
[ext_resource path="res://assets/audio/Level.wav" type="AudioStream" id=9]
[ext_resource path="res://Pow.tscn" type="PackedScene" id=10]
[ext_resource path="res://assets/audio/Powerup.wav" type="AudioStream" id=11]
[ext_resource path="res://CoinsContainer.gd" type="Script" id=12]

[node name="Main" type="Node2D"]
position = Vector2( 1, 0 )
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}
Coin = ExtResource( 4 )
Hurt = ExtResource( 6 )
Pow = ExtResource( 10 )
playtime = 30

[node name="Git_die" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="Level_up" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="Pick_up" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="Game_run" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )

[node name="HUD" parent="." instance=ExtResource( 5 )]

[node name="BG" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 480.0
margin_bottom = 720.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="PlayerStart" type="Position2D" parent="."]
position = Vector2( 240, 300 )

[node name="PowContainer" type="Node2D" parent="."]

[node name="CoinsContainer" type="Node2D" parent="."]
script = ExtResource( 12 )

[node name="HurtContainer" type="Node2D" parent="."]

[node name="GameTime" type="Timer" parent="."]

[connection signal="start_game" from="HUD" to="." method="_on_HUD_start_game"]
[connection signal="pick_up" from="Player" to="." method="_on_Player_pick_up"]
